--- a/site/templates/twig/items/cxm/.new/xref/form/details.twig
+++ b/site/templates/twig/items/cxm/.new/xref/form/details.twig
@@ -19,7 +19,7 @@
 				</option>
 			{% endfor %}
 		</select>
-		<small class="form-text text-muted item-uom">Item UoM: {{ xref.item.uom_sale }}</small>
+		<small class="form-text text-muted">Item UoM: <span class="item-uom">{{ xref.item.uom_sale }}</span></small>
 	</div>
 </div>
 <div class="row form-group">
