--- a/site/templates/twig/items/cxm/.new/xref/form/key.twig
+++ b/site/templates/twig/items/cxm/.new/xref/form/key.twig
@@ -133,7 +133,7 @@
 				}
 			}
 		%}
-		<small class="form-text text-muted description">{{ xref.xref.description }}</small>
-		<small class="form-text text-muted description2">{{ xref.xref.description2 }}</small>
+		<small class="form-text text-muted description">{{ xref.item.description }}</small>
+		<small class="form-text text-muted description2">{{ xref.item.description2 }}</small>
 	</div>
 </div>
