--- a/site/templates/twig/items/cxm/.new/xref/form.twig
+++ b/site/templates/twig/items/cxm/.new/xref/form.twig
@@ -1,4 +1,4 @@
-<form action="{{ input.url() }}" method="POST" id="cxm-item-form">
+<form action="{{ input.url() }}" method="POST" id="xref-form">
 	<input type="hidden" name="action" value="update">
 	<input type="hidden" name="original_custitemID" value="{{ xref.custitemID }}">
 	<input type="hidden" name="updatepdm" value="false">
