--- a/site/templates/twig/items/vxm/notes/internal/modal.twig
+++ b/site/templates/twig/items/vxm/notes/internal/modal.twig
@@ -42,7 +42,7 @@
 					</div>
 
 					<div class="form-group">
-						{% include 'msa/noce/ajax/button.twig' with {'input': '#internal-notes'} %}
+						{% include 'msa/noce/ajax/button.twig' with {'input': '#intv-notes'} %}
 					</div>
 
 					<div class="form-group">
