--- a/site/templates/twig/items/vxm/notes/notes.twig
+++ b/site/templates/twig/items/vxm/notes/notes.twig
@@ -8,24 +8,30 @@
 #}
 <h3>Notes <i class="fa fa-commenting" aria-hidden="true"></i></h3>
 
+{% set response = session.get('response_qnote') %}
+
+{% if response and response.has_error() %}
+	{% include 'code-tables/code-table-response.twig' with {'response': response} %}
+{% endif %}
+
 <ul class="nav nav-tabs mb-3" id="notes-tab" role="tablist">
 	<li class="nav-item" role="presentation">
-		<a class="nav-link active" id="internal-tab" data-toggle="tab" href="#internal" role="tab" aria-controls="internal" aria-selected="true">
+		<a class="nav-link {{ response.type == qnotes.notes.internal.type() ? 'active' : (response ? '' : 'active') }}}" id="internal-tab" data-toggle="tab" href="#internal" role="tab" aria-controls="internal" aria-selected="true">
 			Internal
 		</a>
 	</li>
 	<li class="nav-item" role="presentation">
-		<a class="nav-link" id="detail-tab" data-toggle="tab" href="#detail" role="tab" aria-controls="detail" aria-selected="false">
+		<a class="nav-link {{ response.type == qnotes.notes.detail.type() ? 'active' : '' }}" id="detail-tab" data-toggle="tab" href="#detail" role="tab" aria-controls="detail" aria-selected="false">
 			Detail
 		</a>
 	</li>
 </ul>
 
 <div class="tab-content" id="notes-tab-content">
-	<div class="tab-pane fade show active" id="internal" role="tabpanel" aria-labelledby="internal-tab">
+	<div class="tab-pane fade {{ response.type == qnotes.notes.internal.type() ? 'show active' : (response ? '' : 'show active') }}" id="internal" role="tabpanel" aria-labelledby="internal-tab">
 		{% include 'items/vxm/notes/internal/list.twig' %}
 	</div>
-	<div class="tab-pane fade" id="detail" role="tabpanel" aria-labelledby="detail-tab">
+	<div class="tab-pane fade {{ response.type == qnotes.notes.detail.type() ? 'show active' : '' }}" id="detail" role="tabpanel" aria-labelledby="detail-tab">
 		{% include 'items/vxm/notes/detail/note.twig' %}
 	</div>
 </div>
