--- a/site/templates/twig/items/cxm/.new/xref/js/classes/Inputs.js.twig
+++ b/site/templates/twig/items/cxm/.new/xref/js/classes/Inputs.js.twig
@@ -17,5 +17,6 @@ class CxmInputs {
 		this.uom_pricing     = this.form.find('select[name=uom_pricing]');
 		this.price_uom       = this.form.find('input[name=price_uom]');
 		this.price_customer  = this.form.find('input[name=price_customer]');
+		this.price_contract  = this.form.find('input[name=price_contract]');
 	}
 }
