--- a/site/templates/twig/items/cxm/.new/xref/js/classes/Configs.js.twig
+++ b/site/templates/twig/items/cxm/.new/xref/js/classes/Configs.js.twig
@@ -9,8 +9,20 @@ class CxmConfigs {
 	}
 
 	constructor() {
+		this.allowPdmUpdate = {{ cxm.allowPdmUpdate() ? 'true' : 'false' }},
 		this.fields = {
-			
+			conversion: {
+				precision: {{ cxm.fieldAttribute('conversion', 'precision') }}
+			},
+			price_customer: {
+				precision: {{ cxm.fieldAttribute('price_customer', 'precision') }}
+			},
+			price_retail: {
+				precision: {{ cxm.fieldAttribute('price_retail', 'precision') }}
+			},
+			price_uom: {
+				precision: {{ cxm.fieldAttribute('price_uom', 'precision') }}
+			},
 		};
 	}
 }
