--- a/site/templates/twig/code-tables/optm/list/toolbar.twig
+++ b/site/templates/twig/code-tables/optm/list/toolbar.twig
@@ -14,7 +14,7 @@
 			</button>
 		{% else %}
 			<a href="{{ page.url }}" class="btn btn-primary">
-				<i class="fa fa-undo" aria-hidden="true"></i> Back to {{ page.name|upper }}
+				<i class="fa fa-undo" aria-hidden="true"></i> Back to Maintenance
 			</a>
 			&nbsp;
 			<a href="{{ page.get_printURL() }}" class="btn btn-primary">
