--- a/site/templates/twig/items/cxm/.new/customers/form.twig
+++ b/site/templates/twig/items/cxm/.new/customers/form.twig
@@ -1,6 +1,6 @@
 <form action="{{ input.paginateUrl(1, {'includeQueryString': false}) }}" method="GET" class="allow-enterkey-submit">
 	<div class="input-group">
-		<input class="form-control inline" type="text" name="q" value="{{ input.get.text('q') }}" id="itemID" placeholder="Search By Cust Item ID, Item ID" autofocus>
+		<input class="form-control inline" type="text" name="q" value="{{ input.get.text('q') }}" id="itemID" placeholder="Search By Cust ID, Name, City, State, Zip" autofocus>
 		<span class="input-group-btn">
 			<button type="submit" class="btn btn-light"> <i class="fa fa-search"></i> <span class="sr-only">Search</span> </button>
 		</span>
