--- a/site/templates/twig/items/cxm/.new/customers/toolbar.twig
+++ b/site/templates/twig/items/cxm/.new/customers/toolbar.twig
@@ -12,16 +12,8 @@
 	<div class="col-sm-3"></div>
 
 	<div class="col-sm-6">
-		<form action="{{ input.paginateUrl(1, {'includeQueryString': false}) }}" method="GET" class="allow-enterkey-submit">
-			<div class="input-group">
-				<input class="form-control inline" type="text" name="q" value="{{ input.get.text('q') }}" placeholder="Search Vendors by ID, Name, Address, City, State, Zip" autofocus>
-				<span class="input-group-btn">
-					<button type="submit" class="btn btn-light">
-						<i class="fa fa-search"></i> <span class="sr-only">Search</span>
-					</button>
-				</span>
-			</div>
-		</form>
+		{% include 'items/cxm/.new/customers/form.twig' %}
+
 		{% if input.get.text('q') %}
 			<a href="{{ input.url() }}" class="btn btn-warning mt-2">
 				<i class="fa fa-times"></i> Clear Search
