--- a/site/templates/twig/code-tables/mar/cocom/list.twig
+++ b/site/templates/twig/code-tables/mar/cocom/list.twig
@@ -3,7 +3,7 @@
 {% block list_header_row %}
 	<div class="row align-items-center">
 		<div class="col-sm-3 text-center">
-			Iso Codes
+			ISO Codes
 		</div>
 		<div class="col-sm-1">
 			Custom
