--- a/site/templates/twig/code-tables/optm/list/toolbar.twig
+++ b/site/templates/twig/code-tables/optm/list/toolbar.twig
@@ -22,7 +22,7 @@
 			</a>
 		{% endif %}
 	</div>
-	<div class="col-sm-6 mb-3">
+	<div class="col-sm-6 mb-3 d-print-none {{ input.get.offsetExists('print') ? 'collapse' : '' }}">
 		{% block search %}
 			<div>
 				<div class="d-flex justify-content-between flex-wrap">
