--- a/site/templates/twig/code-tables/optm/sysop/list/list.twig
+++ b/site/templates/twig/code-tables/optm/sysop/list/list.twig
@@ -14,9 +14,11 @@
 			<th class="p-3">Code</th>
 			<th class="p-3">Description</th>
 			<th class="p-3 text-right">
-				<button class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-json="">
-					<i class="fa fa-plus" aria-hidden="true"></i> Add
-				</button>
+				{% if input.get.offsetExists('print') == false %}
+					<button class="btn btn-light btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-json="">
+						<i class="fa fa-plus" aria-hidden="true"></i> Add
+					</button>
+				{% endif %}
 			</th>
 		</tr>
 	</thead>
@@ -37,13 +39,15 @@
 				<td>{{ code.id }}</td>
 				<td>{{ code.description }}</td>
 				<td class="text-right">
-					<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ optm.codeJson(code)|json_encode }}">
-						<i class="fa fa-pencil" aria-hidden="true"></i> Edit
-					</button>
-					&nbsp; &nbsp;
-					<a href="{{ page.codeDeleteUrl(code.sysop, code.id) }}" class="btn btn-danger btn-sm delete_button">
-						<i class="fa fa-trash" aria-hidden="true"></i> Delete
-					</a>
+					{% if input.get.offsetExists('print') == false %}
+						<button type="button" class="btn btn-warning btn-sm" data-toggle="modal" data-target="#edit-code-modal" data-code="{{ code.code }}" data-description="{{ code.description }}" data-json="{{ optm.codeJson(code)|json_encode }}">
+							<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+						</button>
+						&nbsp; &nbsp;
+						<a href="{{ page.codeDeleteUrl(code.sysop, code.id) }}" class="btn btn-danger btn-sm delete_button">
+							<i class="fa fa-trash" aria-hidden="true"></i> Delete
+						</a>
+					{% endif %}
 				</td>
 			</tr>
 		{% endfor %}
