--- a/site/templates/twig/items/vxm/notes/detail/js.twig
+++ b/site/templates/twig/items/vxm/notes/detail/js.twig
@@ -1,6 +1,7 @@
 $(function () {
 	var form_detail  = $('#detail-form');
 	var modal_detail = $('#notes-detail-modal');
+	var alarm = Alerts.getInstance();
 
 	modal_detail.on('shown.bs.modal', function (e) {
 		var modal = $(this);
