--- a/site/templates/twig/items/vxm/notes/internal/js.twig
+++ b/site/templates/twig/items/vxm/notes/internal/js.twig
@@ -1,6 +1,7 @@
 $(function () {
 	var form_intv  = $('#intv-form');
 	var modal_intv = $('#notes-internal-modal');
+	var alarm = Alerts.getInstance();
 
 	modal_intv.on('show.bs.modal', function (e) {
 		var modal = $(this);
@@ -8,10 +9,15 @@ $(function () {
 		var button = $(e.relatedTarget);
 		var note_row = button.closest('.qnote-row');
 
+		if ($('.response-alert').length) {
+			$('.response-alert').remove();
+		}
+
 		if (note_row.length) {
-			// modal.find('.action-desc').text('Editing');
-			modal.find('input[name=notedate]').val(button.data('date')).attr('readonly', '');
-			modal.find('input[name=notetime]').val(button.data('time')).attr('readonly', '');
+			modal.find('input[name=notedate]').val(button.data('date')).attr('readonly', 'readonly');
+			modal.find('input[name=notedate]').attr('readonly', 'readonly');
+			modal.find('input[name=notedate]').closest('.datepicker').find('.dropdown-toggle').attr('disabled', 'disabled');
+			modal.find('input[name=notetime]').val(button.data('time')).attr('readonly', 'readonly');
 			modal.find('input[name=rawnotetime]').val(button.data('rawnotetime'));
 			modal.find('textarea[name=note]').val(note_row.find('textarea').text());
 			modal.find('button[value=delete-notes]').addClass('show');
@@ -25,10 +31,6 @@ $(function () {
 				modal.find('input[name=notetime]').val(datetime.time).removeAttr('readonly');
 				modal.find('input[name=notedate]').val(datetime.date).removeAttr('readonly');
 			});
-		}
-
-		if ($('.response-alert').length) {
-			$('.response-alert').remove();
 		}
 		form.attr('data-serialized', form.serialize());
 	});
