--- a/site/templates/twig/code-tables/mar/ctm/edit/form.twig
+++ b/site/templates/twig/code-tables/mar/ctm/edit/form.twig
@@ -17,6 +17,7 @@
 				<label for="mail_list">Mail List</label>
 				{% include 'util/select.twig' with {'name': 'mail_list', 'id': 'mail_list', 'hideblankoption' : 'true', 'selectedvalue': code.mail_list, 'options': {'Y': 'Yes', 'N': 'No'}} %}
 			</div>
+			
 			{% if manager.updateGlAccts() == false %}
 				<div class="form-group">
 					<label for="email">Order Approval Email</label>
@@ -25,7 +26,7 @@
 			{% endif %}
 		</div>
 		<div class="col-sm-6">
-			{% if manager.updateGlAccts() == false %}
+			{% if manager.updateGlAccts() %}
 				<legend>GL Accounts</legend>
 				{% include 'code-tables/mar/ctm/edit/form/gl-account.twig' with {'name' : 'glsales', 'label': 'Sales', 'value': code.glsales, 'description': manager.glAcctDescription(code.glsales)} %}
 				{% include 'code-tables/mar/ctm/edit/form/gl-account.twig' with {'name' : 'glcredits', 'label': 'Credits', 'value': code.glcredits, 'description': manager.glAcctDescription(code.glcredits)} %}
