--- a/site/templates/twig/items/cxm/.new/customers/display.twig
+++ b/site/templates/twig/items/cxm/.new/customers/display.twig
@@ -8,7 +8,7 @@
 		</div>
 		<div class="col-sm-4 text-right">
 			<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#new-cxm-modal">
-				<i class="fa fa-plus" aria-hidden="true"></i> Add X-Ref
+				<i class="fa fa-plus" aria-hidden="true"></i> Add X-Ref Customer
 			</button>
 		</div>
 	</div>
